--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2055,7 +2055,7 @@ input, select, textarea {
 			display: block;
 			height: 100%;
 			left: 0;
-			opacity: 0.5;
+			opacity: 0;
 			position: absolute;
 			top: 0;
 			width: 100%;
@@ -2112,7 +2112,7 @@ input, select, textarea {
 		.image.right {
 			float: right;
 			margin: 0 0 1em 1.5em;
-			top: 0.25em;
+			top: .25em;
 		}
 
 		.image.left, .image.right {
