--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -74,6 +74,20 @@ input, select, textarea {
 
 /* Basic */
 
+	.videoWrapper {
+		position: relative;
+		padding-bottom: 56.25%; /* 16:9 */
+		padding-top: 25px;
+		height: 0;
+	}
+	.videoWrapper iframe {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+	}
+
 	html {
 		box-sizing: border-box;
 	}
@@ -2446,7 +2460,7 @@ input, select, textarea {
 		background-color: transparent;
 		border-radius: 0.35em;
 		border: solid 3px #efefef;
-		color: #787878 !important;
+		color: #dadada !important;
 		cursor: pointer;
 		display: inline-block;
 		font-weight: 400;
